--- a/_config.yml
+++ b/_config.yml
@@ -133,7 +133,7 @@ author:
        url: "https://linkedin.com/in/shbang91"
     - label: "Google Scholar"
       icon: "fab fa-fw fa-graduation-cap"
-      url: "https://scholar.google.com/citations?user=b9_rO1sAAAAJ&hl=en."
+      url: "https://scholar.google.com/citations?user=b9_rO1sAAAAJ&hl=en"
 
 # Site Footer
 footer:
