--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Seung Hyeon Bang"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Seung Hyeon Bang"
-description              : "An amazing website."
+description              : #"An amazing website."
 url                      : "https://shbang91.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "shbang91/shbang91.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -112,7 +112,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       url: "mailto:bangsh0718@gmail.com"
+      url: "mailto:bangsh0718@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -124,13 +124,13 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-       url: "https://github.com/shbang91"
+      url: "https://github.com/shbang91"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-       url: "https://linkedin.com/in/shbang91"
+      url: "https://linkedin.com/in/shbang91"
     - label: "Google Scholar"
       icon: "fab fa-fw fa-graduation-cap"
       url: "https://scholar.google.com/citations?user=b9_rO1sAAAAJ&hl=en"
