--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "About"
     url: /about/
   - title: "Publications"
-    url: #/publications/
+    url: /publications/
   - title: "CV"
     url: #/cv/
   - title: "Contact"
