--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ main:
   - title: "Publications"
     url: /publications/
   - title: "CV"
-    url: #/cv/
+    url: /assets/images/CV_SeungHyeon_Bang.pdf
   - title: "Contact"
     url: #/contact/
