--- a/_config.yml
+++ b/_config.yml
@@ -105,8 +105,8 @@ analytics:
 # Site Author
 author:
   name             : "Seung Hyeon Bang"
-  avatar           : "/assets/images/bio-photo.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "PhD Candidate at The University of Texas at Austin"
+  avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "Software Engineer in Robotics at Apptronik"
   location         : "Austin, TX"
   email            :
   links:
